AN alignment issue of buttons

--- a/Login Screen/css/login-form.css
+++ b/Login Screen/css/login-form.css
@@ -14,6 +14,7 @@
 #input-container {
 	display:flex;
 	flex-direction:column;
+	align-items: center;
 	row-gap: 10px;
 }
 
@@ -120,7 +121,7 @@ label#label-user-name {
 }
 
 #input-buttons-container {
-	width:15rem;
+	width: 15rem;
 	display:flex;
 	flex-direction:row;
 	justify-content: space-around;
@@ -141,6 +142,10 @@ label#label-user-name {
 
 .button-login-form:active {
 	background: var(--login-form-elements-button-bg-active);
+}
+
+#button-greeter-screen.button-login-form {
+	border-radius: 6px;
 }
 
 .button-login-form-image {
